--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "style-loader": "^3.3.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "vue-loader": "^17.0.0",
+    "vue-style-loader": "^4.1.3",
     "vuex": "^4.0.2",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
