--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.18.9",
+    "@babel/plugin-transform-runtime": "^7.18.9",
+    "@babel/preset-env": "^7.18.9",
     "@vue/compiler-sfc": "^3.2.37",
     "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.5",
@@ -36,6 +38,7 @@
     "serve": "^14.0.1",
     "style-loader": "^3.3.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
+    "vue-eslint-parser": "^9.0.3",
     "vue-loader": "^17.0.0",
     "vue-style-loader": "^4.1.3",
     "vuex": "^4.0.2",
@@ -45,6 +48,7 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@babel/runtime": "^7.18.9",
     "vue": "^3.2.37",
     "vue-i18n": "^9.2.0-beta.40",
     "vue-router": "^4.1.2"
