--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --config webpack.prod.js",
+    "lint": "eslint --ext .js,.vue src",
     "start": "webpack serve --open --config webpack.dev.js",
     "preview": "npm run build && http-server ./dist -d"
   },
@@ -15,6 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.18.9",
+    "@babel/eslint-parser": "^7.18.9",
     "@babel/plugin-transform-runtime": "^7.18.9",
     "@babel/preset-env": "^7.18.9",
     "@vue/compiler-sfc": "^3.2.37",
