--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,7 @@
             {
                 "useBuiltIns": "entry",
                 "modules": false,
-                "corejs": "3.6.4",
+                "corejs": "3.6.4"
             }
         ]
     ],
